plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
}


group = 'com.verlake.dam'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

configurations {
	e2eTestImplementation.extendsFrom testImplementation
	e2eTestRuntimeOnly.extendsFrom testRuntimeOnly
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-devtools'
	implementation 'org.springframework.boot:spring-boot-autoconfigure'
	implementation 'org.springframework.boot:spring-boot-starter-batch'
	implementation 'org.springframework.batch:spring-batch-core:5.+'
	implementation 'org.springframework.batch:spring-batch-infrastructure:5.+'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.slf4j:slf4j-api:2.+'
	implementation 'ch.qos.logback:logback-classic:1.+'
	implementation 'ch.qos.logback:logback-core:1.+'
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.+'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.+'
	implementation 'org.springframework.boot:spring-boot-starter-mail:3.+'
	implementation 'org.liquibase:liquibase-core:4.+'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
	runtimeOnly 'mysql:mysql-connector-java:8.+'
	implementation 'org.projectlombok:lombok:1.+'
	annotationProcessor 'org.projectlombok:lombok:1.+'
	implementation 'org.springframework.boot:spring-boot-starter-security:3.+'
	implementation 'org.keycloak:keycloak-spring-boot-starter:25.+'
	implementation 'org.keycloak:keycloak-admin-client:26.+'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:3.+'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server:3.+'
	implementation 'org.springframework.security:spring-security-oauth2-jose:6.+'
	implementation 'me.paulschwarz:spring-dotenv:4.+'
	implementation 'io.github.cdimascio:dotenv-java:3.+'
	implementation group: 'com.javax0.license3j', name: 'license3j', version: '3.3.+'
	implementation 'co.elastic.apm:apm-agent-api:1.+'
	implementation 'co.elastic.apm:apm-agent-attach:1.+'
	implementation 'net.logstash.logback:logstash-logback-encoder:8.+'

	implementation platform('software.amazon.awssdk:bom:2.31.12')
	implementation 'software.amazon.awssdk:s3'
	implementation 'software.amazon.awssdk:ses'

	implementation 'com.google.firebase:firebase-admin:9.+'

	testImplementation 'org.testcontainers:testcontainers:1.+'
	testImplementation 'org.testcontainers:junit-jupiter:1.+'
	testImplementation 'org.testcontainers:mysql:1.+'
	testImplementation 'org.mockito:mockito-core:5.+'
	testRuntimeOnly 'org.junit.platform:junit-platform-commons:1.+'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.+'
	testRuntimeOnly 'org.junit.platform:junit-platform-engine:1.+'

	testImplementation 'org.junit.platform:junit-platform-suite:1.+'
	testImplementation 'org.junit.platform:junit-platform-suite-api:1.+'
	testImplementation 'org.junit.platform:junit-platform-suite-commons:1.+'
	testImplementation 'org.junit.platform:junit-platform-suite-engine:1.+'

	// E2E test dependencies
	e2eTestImplementation 'io.github.bonigarcia:webdrivermanager:6.+'
	e2eTestImplementation 'org.seleniumhq.selenium:selenium-java:4.+'
	e2eTestImplementation 'org.springframework.boot:spring-boot-starter-test'
	e2eTestImplementation 'org.testcontainers:testcontainers:1.+'
	e2eTestImplementation 'org.testcontainers:junit-jupiter:1+'
	e2eTestImplementation 'org.junit.platform:junit-platform-suite:1.+'
	e2eTestImplementation 'org.junit.platform:junit-platform-suite-api:1.+'
	e2eTestImplementation 'org.junit.platform:junit-platform-suite-commons:1.+'
	e2eTestImplementation 'org.junit.platform:junit-platform-suite-engine:1.+'

	// Parquet dependencies
	implementation 'org.apache.parquet:parquet-avro:1.+'
	implementation 'org.apache.parquet:parquet-column:1.+'
	implementation 'org.apache.hadoop:hadoop-client:3.+'
	implementation 'org.apache.avro:avro:1.+'
	
	// AOP
	implementation 'org.springframework.boot:spring-boot-starter-aop'
	implementation 'org.springframework.cloud:spring-cloud-context:4.+'
}

sourceSets {
	e2eTest {
		java {
			srcDir 'src/e2eTest/java'
		}
		resources {
			srcDir 'src/e2eTest/resources'
		}
	}
}

tasks.register('e2eTest', Test) {
	description = 'Runs the end-to-end tests.'
	group = 'verification'
	testClassesDirs = sourceSets.e2eTest.output.classesDirs
	classpath = sourceSets.e2eTest.runtimeClasspath
	useJUnitPlatform {
		includeEngines 'junit-jupiter', 'junit-platform-suite'
	}

	scanForTestClasses = true
	// Replace System.setProperty with systemProperty
	systemProperty('test.profile', System.getProperty('test.profile', 'dev'))

	include '**/*E2ETest.class'
	include '**/*E2ETestSuite.class'

	testLogging {
		events "passed", "skipped", "failed", "standardOut", "standardError"
		showExceptions true
		showCauses true
		showStackTraces true
		exceptionFormat = 'full'
	}

	// Add more debug output
	doFirst {
		println "Running E2E tests with profile: ${System.getProperty('test.profile', 'dev')}"
		println "Test system properties: ${systemProperties}"
	}
	
}

tasks.register("bootRunDev") {
	group = "application"
	description = "Runs the Spring Boot application with the dev profile"
	doFirst {
		tasks.bootRun.configure {
			systemProperty("spring.profiles.active", "dev")
		}
	}
	finalizedBy("bootRun")
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs << "-parameters";
}

bootRun {
	jvmArgs = [
		'-Dspring.devtools.restart.enabled=true',
		'-Dspring.devtools.livereload.enabled=true',
		'-Dspring.devtools.restart.additional-paths=src/main/java,src/main/resources'
	]
}

configurations {
	configureEach {
		// Exclude log4j-to-slf4j globally
		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
	}
}
